--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,10 +30,12 @@ main{
         img{
             width: 100px;
             height: 50%;
+            box-shadow: whitesmoke;
         }
     }
 }
 footer{
+    background-color: black;
     list-style: none;
     margin-top: 30%;
     div{
@@ -55,3 +57,4 @@ footer{
         }
     }
 }
+@import url(_contacto.scss);
